version/0.20/_sources/api/solver/_autosummary/settings/mass_flow_multiplier.rst.txt
:orphan:

.. _mass_flow_multiplier:

mass_flow_multiplier
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.mass_flow_multiplier.mass_flow_multiplier
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`recirculation_inlet_child <recirculation_inlet_child>`       'child_object_type' of recirculation_inlet.

:ref:`phase_child <phase_child_22>`                                              'child_object_type' of phase.

============================================================   ===============================================

